--- a/style.css
+++ b/style.css
@@ -196,3 +196,31 @@ img {
     margin-top: 25px;
     cursor: pointer;
 }
+
+#checkout-form {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding-bottom: 50px;
+}
+
+#checkout-form label {
+    display: inline-block;
+    width: 100px;
+    vertical-align: top;
+    margin-top: 10px;
+}
+
+#checkout-form input {
+    width: 100%;
+    max-width: 350px;
+    padding: 5px;
+    margin-bottom: 10px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+textarea {
+    width: 100%;
+    height: 50px;
+}
